collatz/overlay/stage/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collatz-backend
spec:
  replicas: 2
  template:
    spec:
      containers:
      - image: staging-collatz-backend:latest
        imagePullPolicy: Always
        name: collatz-backend
        ports:
          - containerPort: 8081
            protocol: TCP
