collatz/overlay/stage/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collatz-frontend
spec:
  replicas: 2
  template:
    spec:
      containers:
      - image: 'image-registry.openshift-image-registry.svc:5000/' + ARGOCD_APP_NAMESPACE + '/staging-collatz-frontend:latest'
        imagePullPolicy: Always
        name: collatz-frontend
        ports:
          - containerPort: 8080
            protocol: TCP
