collatz/overlay/stage/knative.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: ksvc-staging-collatz-backend
spec:
  template:
    metadata:
    spec:
      containerConcurrency: 0
      containers:
        - image: >-
            image-registry.openshift-image-registry.svc:5000/aodf/staging-collatz-backend
          imagePullPolicy: IfNotPresent
          name: ksvc-staging-collatz-backend
          ports:
            - containerPort: 8081
              protocol: TCP
          readinessProbe:
            successThreshold: 1
            tcpSocket:
              port: 0
          resources: {}
      enableServiceLinks: false
      timeoutSeconds: 300
  traffic:
    - latestRevision: true
      percent: 100
