collatz/overlay/stage/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: collatz
  name: stage-collatz-backend
spec:
  ports:
    - name: 8081-tcp
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    deployment: stage-collatz-backend
  sessionAffinity: None
  type: ClusterIP
