collatz/overlay/stage/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: collatz
  name: collatz-frontend
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    deployment: collatz-frontend
  sessionAffinity: None
  type: ClusterIP
