collatz/overlay/stage/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: collatz
  annotations:  
    link.argocd.argoproj.io/external-link: http://staging-collatz-aodf.apps.obelix.lab.pen
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: staging-collatz-frontend
    weight: 100
  wildcardPolicy: None
